# recipes-skill

./: .gitignore  CONTRIBUTING.md  QUICKSTART-publisher.md  QUICKSTART-share.md  QUICKSTART-subscriber.md  README.md  SKILL.md  SPRINT4_CONTRACT.md  SPRINT4_D4_REPORT.md  package.json  pyproject.toml
.github/: SKILL_QUALITY_GATE_VENDORED.md  skill_quality_gate.py
.github/workflows/: installer-matrix.yml  lint-allowlist.yml  publish-npm.yml  publish-pypi.yml  skill-quality.yml  tests.yml
SPRINT_DOCS/: SUBAGENT_B_OUTPUT.md  SUBAGENT_FIX_CLI_OUTPUT.md
bundles/: starter-fleet-operator.yaml  starter-solo-operator.yaml
recipes-installer/: install-fleet.sh  install-v2.sh
recipes-installer/profiles/: byoa-claudecode.sh  byoa-codex.sh  hermes.sh  openclaw.sh
recipes-mcp/: server.py
references/: mcp_tools_reference.py
scripts/: allowlist_lint.py  install-skill.js
scripts/recipes-cli/: recipes_cli.py
skills/chef/: MANIFEST.allowlist.yaml  SKILL.md  chef  recipe.yaml
src/recipes_cli/: __init__.py
starter-skills/client-onboarding/: MANIFEST.allowlist.yaml  SKILL.md  recipe.yaml
starter-skills/client-reporter/: MANIFEST.allowlist.yaml  SKILL.md  recipe.yaml
starter-skills/cold-outreach/: MANIFEST.allowlist.yaml  SKILL.md  recipe.yaml
starter-skills/content-calendar/: MANIFEST.allowlist.yaml  SKILL.md  recipe.yaml
starter-skills/gohighlevel-toolkit/: MANIFEST.allowlist.yaml  (+2 more)
tests/: test_allowlist_lint.py  test_chef_skill.py  test_installer.py  test_recipes_capabilities.py  test_recipes_cli.py  test_recipes_mcp.py  test_sync.py  test_telemetry_emit.py
(+20 files in other folders)
